# cheatly.khulnasoft.com

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: tests-ubuntu.yml
cheatsheets/sheets/: chmod  nodejs  oeis  rfc
cheatsheets/tests/: lenchk
doc/: README-ja.md  standalone.md
lib/: buttons.py  cheat_wrapper.py  cheat_wrapper_test.py  config.py  languages_data.py  routing.py  standalone.py
lib/adapter/: cheat_sheets.py  cmd.py  internal.py  question.py  upstream.py
lib/frontend/: html.py
share/: ansi2html.sh  bash_completion.txt  cheatly.khulnasoft.com.txt  cheatly.khulnasoft.com.txt.new  emacs-ivy.txt  emacs.txt  firstpage-v1.txt  firstpage-v2.pnl  fish.txt  help.txt  intro.txt  post.txt  styles-demo.txt  vim.txt  zsh.txt
share/adapters/: chmod.grc  chmod.sh  oeis.sh  rfc.sh
share/static/: malformed-response.html  opensearch.xml
src/: error.rs  main.rs  prelude.rs
src/client/: config.rs  error.rs  mod.rs
tests/: run-tests.sh  tests.txt
tests/results/: 13  17  4  5  6  8
tmux/: tmux-cheatly.tmux
vim/: Readme.md
vim/autoload/: cheat.vim
vim/autoload/cheat/: frameworks.vim  providers.vim  requests.vim  session.vim
vim/autoload/cheat/providers/: loclist.vim  quickfix.vim  syntastic.vim
vim/doc/: cheat.txt  tags
vim/plugin/: cheat.vim
