[package]
name = "cheatly"
version = "0.1.1"
edition = "2021"
description = "Rust CLI for interacting with https://cheatly.khulnasoft.com"
authors = ["khulnasoft"]
readme = "README.md"
repository = "https://github.com/khulnasoft/cheatly.khulnasoft.com"
license = "MIT"
keywords = ["cheat", "sheet", "cli", "client"]
categories = [
  "asynchronous",
  "command-line-utilities",
  "concurrency",
  "web-programming::http-client",
]

[dependencies]
futures = "0.3.26"
hyper = { version = "0.14.24", features = ["http1", "client", "runtime"] }
hyper-tls = { version = "0.5.0" }
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }